# nautobot-day2-v2

./: .gitignore  README.md  pyproject.toml
backup_configs/Airo-HQ/: AP-Sw.cfg  Access-SW.cfg  Airo-FW-01.cfg  Core-Sw.cfg
deploy/single-server/: .env.example  Dockerfile  INSTALL.md  README.md  docker-compose.yml  nautobot_config.py
jobs/: mist_sync.py  sync_network_data_job.py
nautobot_day2/: __init__.py  client.py  concurrency.py  openbao_client.py  tasks.py
nautobot_day2/broker/: api_server.py  core.py  mcp_server.py
nautobot_day2/chatops/: __init__.py  worker.py
nautobot_day2/jobs/: __init__.py  sync_network_data_job.py
nautobot_day2/onboarding/: __init__.py  bootstrap_nautobot.py  create_tenant.py  credential_checker.py  engineer_template.csv  nautobot_onboard_v2.py  nautobot_prepare.py  onboard_cli.py  preflight_check.py  sync_network_data.py  upload_app.py  vendor_matrix.py  vendor_test.py  vendor_test_app.py
nautobot_day2/onboarding/profiles/: airowire-networks.json
nautobot_day2/onboarding/templates/: index.html
nautobot_day2/vendor_commands/: vendor_commands.yaml
onboarding_command_mappers/: hp_procurve.yml
onboarding_mappers/: hp_procurve.yml
site-onboard/: chatops_onboard_addition.py  create_tenant.py  engineer_template.csv  nautobot_onboard_v2.py  onboard_cli.py  preflight_check.py  sync_network_data.py  upload_app.py  vendor_matrix.py  vendor_test.py  vendor_test_app.py
site-onboard/templates/: vendor_test.html
ttp/: hp_procurve_show_system_  hp_procurve_show_system_|_include_Serial.ttp
(+2 files in other folders)
